tests/cmp/dc-label-empty.golden
Parse Error:
tests/cmp/dc-label-empty.trp:1:27: parse error
  (while parsing DC label)
  1 | let val x = 42 raisedTo `<>`
    |                           ^
  unexpected '>`' (DC label end)
  expected ';'

Suggestion: In DC labels, use ';' to separate confidentiality and integrity.
  Syntax: `< confidentiality ; integrity >`
  Example: `< alice ; bob >`

